# announcemint

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Justfile  Makefile  README.md  activate_env.sh  brand.json  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  release-please-config.json  requirements.txt  setup.py  setup_env.sh  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: build-installers.yml  ci.yml  lint.yml  release-assets.yml  release-please.yml
announcemint/: __init__.py  main.py
announcemint/gui/: __init__.py  aws_modal.py  main_window.py
announcemint/utils/: __init__.py  aws_helpers.py  helpers.py
flatpak/: README.md  com.santiagon610.Announcemint.metainfo.xml  com.santiagon610.Announcemint.yml  manifest.yml.in  metainfo.xml.in
scripts/: prepare-flatpak-deb.js  repack-appimage-gzip.sh  start-dev-and-wait.js  sync-brand.js  sync-version.js  windows-vs-devcmd.ps1
src/: App.vue  app-config.ts  main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_config.rs  aws_config_file.rs  cli.rs  main.rs  polly.rs  preset.rs  progress.rs
tests/: __init__.py  conftest.py  test_main.py  test_utils.py
