[package]
name = "announcemint"
version = "1.2.0" # x-release-please-version
description = "Text-to-speech via AWS Polly with preset-based output"
authors = ["Announcemint"]
license = "GPL-3.0"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-cli = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-config = "1"
aws-runtime = "1"
aws-sdk-polly = "1"
aws-sdk-sts = "1"
aws-credential-types = "1"
aws-smithy-types = "1"
aws-types = "1"
dirs = "5"
tokio = { version = "1", features = ["fs", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
urlencoding = "2"
bytes = "1"
clap = { version = "4", features = ["env", "derive"] }
lewton = "0.10"
rubato = "0.14"
hound = "3.5"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
